# pytest-history

./: .gitignore  README.md  dashboard.html  pyproject.toml
src/pytest_history/: __init__.py  cli.py  model.py  queries.py  report.py
test/: pytest_history_test.py
